tests/machine/x/rust/exists_builtin.error
line 0: compile: exit status 1
warning: unnecessary parentheses around assigned value
 --> /workspace/mochi/tests/machine/x/rust/exists_builtin.rs:3:16
  |
3 |     let flag = ({ let mut tmp1 = Vec::new();for x in &data { if !(x == 1) { continue; } tmp1.push(x); } tmp1 }.len() > 0);
  |                ^                                                                                                        ^
  |
  = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
  |
3 -     let flag = ({ let mut tmp1 = Vec::new();for x in &data { if !(x == 1) { continue; } tmp1.push(x); } tmp1 }.len() > 0);
3 +     let flag = { let mut tmp1 = Vec::new();for x in &data { if !(x == 1) { continue; } tmp1.push(x); } tmp1 }.len() > 0;
  |

error[E0277]: can't compare `&{integer}` with `{integer}`
 --> /workspace/mochi/tests/machine/x/rust/exists_builtin.rs:3:69
  |
3 |     let flag = ({ let mut tmp1 = Vec::new();for x in &data { if !(x == 1) { continue; } tmp1.push(x); } tmp1 }.len() > 0);
  |                                                                     ^^ no implementation for `&{integer} == {integer}`
  |
  = help: the trait `PartialEq<{integer}>` is not implemented for `&{integer}`
help: consider dereferencing here
  |
3 |     let flag = ({ let mut tmp1 = Vec::new();for x in &data { if !(*x == 1) { continue; } tmp1.push(x); } tmp1 }.len() > 0);
  |                                                                   +

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.

fn main() {
